# OffinceAgent

./: .gitignore  README.md  package-lock.json  package.json
scripts/: dev.ps1  setup.ps1
services/document-service/: pyproject.toml  requirements.txt  run.py
services/document-service/app/: main.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: CenterPane.tsx  LeftPanel.tsx  RightPanel.tsx  TopBar.tsx
src/components/center-pane/: PdfTextPreview.tsx  PreviewHeader.tsx  TextFilePreview.tsx  filePreviewUtils.tsx  pdfSelection.ts  types.ts
