[package]
name = "office-agent"
version = "0.1.0"
description = "Desktop agent shell for document workflows"
authors = ["OfficeAgent"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
